website/docs/v2/android/setup.mdx
import { PackageManagerTabs } from '@rspress/core/theme'

# Android Setup

Once you have [installed Voltra](../getting-started/installation) for Android, configure the Expo plugin and use `@use-voltra/android` for widget JSX.

## 1. Configure the Expo Plugin

Add `@use-voltra/android-client` to your `app.json` or `app.config.js`:

```json
{
  "expo": {
    "plugins": [
      [
        "@use-voltra/android-client",
        {
          "enableNotifications": true,
          "widgets": [
            {
              "id": "my_widget",
              "displayName": "My First Widget",
              "description": "A simple Voltra widget",
              "targetCellWidth": 2,
              "targetCellHeight": 2
            }
          ]
        }
      ]
    ]
  }
}
```

See [Plugin Configuration](./api/plugin-configuration) for all options.

## 2. Prebuild for Android

Update your native Android project:

<PackageManagerTabs
  command={{
    npm: 'npx expo prebuild --platform android',
    yarn: 'yarn dlx expo prebuild --platform android',
    pnpm: 'pnpm dlx expo prebuild --platform android',
    bun: 'bunx expo prebuild --platform android',
  }}
/>

## 3. Run the app

```bash
npx expo run:android
```

Your widget should now be available in the Android widget picker!
